removed font-awesome

--- a/frontpage.html
+++ b/frontpage.html
@@ -45,7 +45,7 @@
     <!--Needs to be loaded here for slick-slider:-->
     <script type="text/javascript" src="skin/frontend/kapten/default/js/jquery-2.2.4.min.js"></script>
 
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
+    <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">-->
 
 
     <!--
