updated bestseller and inspirations

--- a/frontpage.html
+++ b/frontpage.html
@@ -858,29 +858,28 @@
                         <div class="row bestseller">
                             <div class="col-sm-6 col-md-3">
                                 <a href="https://kapten-son.com/de/chrono-silver-light-blue-woven-leather.html" >
-                                    <img class="product-img" src="https://assets.kaptencdn.com/media/catalog/product/cache/1/small_image/300x/040ec09b1e35df139433887a97daa66f/c/h/chrono_silver_light_blue_woven_leather_cd03a1008f01a_f.jpg" alt="Chrono Silver &quot;Light Blue Woven Leather&quot;" title="Chrono Silver &quot;Light Blue Woven Leather&quot;">
+                                    <img class="product-img" src="./skin/frontend/kapten/default/images/bestseller/chrono_silver_light_blue_woven_leather_cd03a1008f01a_f.jpg" alt="Chrono Silver &quot;Light Blue Woven Leather&quot;" title="Chrono Silver &quot;Light Blue Woven Leather&quot;">
                                     <div class="product-name">Silver "Light Blue Woven Leather"</div>
                                     <div class="price">Chrono<br/>249,00 €</div>
                                 </a>
                             </div>
                             <div class="col-sm-6 col-md-3">
-                                <a href="https://kapten-son.com/de/stockholm-grey-blue.html" >
-                                    <img class="product-img" src="https://assets.kaptencdn.com/media/catalog/product/cache/1/small_image/800x800/602f0fa2c1f0d1ba5e241f914e856ff9/1/-/1-stockholm-grey-blue-backpack-with-laptop-pocket-by-kapten-and-son.jpg" alt="Stockholm &quot;Grey Blue&quot;" title="Stockholm &quot;Grey Blue&quot;">
-                                    <div class="product-name">Stockholm "Grey Blue"</div>
-                                    <div class="price"><br/>89,00 €</div>
+                                <a href="https://kapten-son.com/en/copenhagen-grey-brown.html" >
+                                    <img class="product-img" src="./skin/frontend/kapten/default/images/bestseller/1_copenhagen-grey-brown--beautiful-small-backpack-bykapten-and-son-front.jpg" alt="Stockholm &quot;Grey Blue&quot;" title="Stockholm &quot;Grey Blue&quot;">
+                                    <div class="product-name">Copenhagen "Grey Brown"</div>
+                                    <div class="price"><br/>79,00 €</div>
                                 </a>
                             </div>
                             <div class="col-sm-6 col-md-3">
-                                <a href="https://kapten-son.com/de/campina-silver-grey-vintage-leather.html" >
-                                    <img class="product-img" src="https://assets.kaptencdn.com/media/catalog/product/cache/1/small_image/300x/040ec09b1e35df139433887a97daa66f/c/a/campina_grey_vintage_leather_s_new.fw.png" alt="Campina Silver &quot;Grey Vintage Leather&quot;" title="Campina Silver &quot;Grey Vintage Leather&quot;">
-                                    <div class="product-name">Silver "Grey Vintage Leather"</div>
-                                    <div class="col-xs-6 price"><a href="https://kapten-son.com/de/campina-silver-grey-vintage-leather.html">Campina<br/>139,00 €</a></div>
-                                    <div class="col-xs-6 price"><a href="https://kapten-son.com/de/campus-silver-grey-vintage-leather.html">Campus<br/>149,00 €</a></div>
+                                <a href="https://kapten-son.com/en/pure-nox-mesh.html" >
+                                    <img class="product-img" src="./skin/frontend/kapten/default/images/bestseller/pure_nox_mesh.jpg" alt="PURE Nox Mesh" title="PURE Nox Mesh">
+                                    <div class="product-name">PURE Nox Mesh</div>
+                                    <div class="price"><br/>119,00 €</div>
                                 </a>
                             </div>
                             <div class="col-sm-6 col-md-3">
                                 <a href="https://kapten-son.com/de/maui-matt-black-blue-mirrored.html" >
-                                    <img class="product-img" src="https://assets.kaptencdn.com/media/catalog/product/cache/1/small_image/800x800/602f0fa2c1f0d1ba5e241f914e856ff9/k/a/kapten_and_son_maui_matt_black_blue_mirrored_front.jpg" alt="Maui Matt Black Blue Mirrored" title="Maui Matt Black Blue Mirrored">
+                                    <img class="product-img" src="./skin/frontend/kapten/default/images/bestseller/kapten_and_son_maui_matt_black_blue_mirrored_front.jpg" alt="Maui Matt Black Blue Mirrored" title="Maui Matt Black Blue Mirrored">
                                     <div class="product-name">Maui Matt Black Blue Mirrored</div>
                                     <div class="price"><br/>89,00 €</div>
                                 </a>
@@ -940,14 +939,27 @@
                             <div class="instagramm">
                                 <h2 class="font-h2"><a class="font-h2" href="https://kapten-son.com/de/inspirations/" title="Inspiration">Inspiration</a> </h2>
                                 <p class="info1">
-                                    <a class="info1" href="https://kapten-son.com/de/inspirations/" title="Inspiration">
-                                        #BEKAPTEN                    </a>
-                                </p><div class="col-sm-12">
-                                <div id="inspirations-container" class="inline-inspiration" data-limit="4" data-posttype="instagram"><div data-reactid=".g"><div data-reactid=".g.0"><div class="post-item-container big" data-reactid=".g.0.0"><span data-reactid=".g.0.0.$0"><div class="post-item instagram" data-reactid=".g.0.0.$0.0"><a href="https://kapten-son.com/de/inspirations/#instagram/2378/" data-reactid=".g.0.0.$0.0.0"><div class="inspirations-post-hover" data-reactid=".g.0.0.$0.0.0.0"><div data-reactid=".g.0.0.$0.0.0.0.0"><h2 class="main-text" data-reactid=".g.0.0.$0.0.0.0.0.0">Explore</h2><p class="sub-text" data-reactid=".g.0.0.$0.0.0.0.0.1">by @amyseder</p></div></div><img src="https://instagram.ftxl1-1.fna.fbcdn.net/vp/38680a8cedf745cd258524c4f9b99780/5AE9310E/t51.2885-15/s320x320/e35/26225857_198935587351635_7062227506635472896_n.jpg" data-reactid=".g.0.0.$0.0.0.1"></a></div>
-                                    <span data-reactid=".g.0.0.$1"><div class="post-item instagram" data-reactid=".g.0.0.$1.0"><a href="https://kapten-son.com/de/inspirations/#instagram/2379/" data-reactid=".g.0.0.$1.0.0"><div class="inspirations-post-hover" data-reactid=".g.0.0.$1.0.0.0"><div data-reactid=".g.0.0.$1.0.0.0.0"><h2 class="main-text" data-reactid=".g.0.0.$1.0.0.0.0.0">Explore</h2><p class="sub-text" data-reactid=".g.0.0.$1.0.0.0.0.1">by @nathaliekre</p></div></div><img src="https://instagram.ftxl1-1.fna.fbcdn.net/vp/8be06657141c1ea6c3dab0ccb38626da/5AE8B236/t51.2885-15/e35/p320x320/26409416_142326236451604_2671933853882384384_n.jpg" data-reactid=".g.0.0.$1.0.0.1"></a></div>
-                                    <span data-reactid=".g.0.0.$2"><div class="post-item instagram" data-reactid=".g.0.0.$2.0"><a href="https://kapten-son.com/de/inspirations/#instagram/2380/" data-reactid=".g.0.0.$2.0.0"><div class="inspirations-post-hover" data-reactid=".g.0.0.$2.0.0.0"><div data-reactid=".g.0.0.$2.0.0.0.0"><h2 class="main-text" data-reactid=".g.0.0.$2.0.0.0.0.0">Explore</h2><p class="sub-text" data-reactid=".g.0.0.$2.0.0.0.0.1">by </p></div></div><img src="https://instagram.ftxl1-1.fna.fbcdn.net/vp/5be21cc61f0f18aff0f4965a80eb996c/5B25C336/t51.2885-15/s320x320/e35/26867148_275504299646642_6260720814597865472_n.jpg" data-reactid=".g.0.0.$2.0.0.1"></a></div>
-                                    <span data-reactid=".g.0.0.$3"><div class="post-item instagram" data-reactid=".g.0.0.$3.0"><a href="https://kapten-son.com/de/inspirations/#instagram/2376/" data-reactid=".g.0.0.$3.0.0"><div class="inspirations-post-hover" data-reactid=".g.0.0.$3.0.0.0"><div data-reactid=".g.0.0.$3.0.0.0.0"><h2 class="main-text" data-reactid=".g.0.0.$3.0.0.0.0.0">Explore</h2><p class="sub-text" data-reactid=".g.0.0.$3.0.0.0.0.1">by @wanderersandwarriors</p></div></div><img src="https://instagram.ftxl1-1.fna.fbcdn.net/vp/341b7c3c0e8d20714a8983a35c924ec3/5AED773C/t51.2885-15/e35/p320x320/26278299_143958696315414_4785098930775916544_n.jpg" data-reactid=".g.0.0.$3.0.0.1"></a></div>
-                            </div>
+                                    <a class="info1" href="https://kapten-son.com/de/inspirations/" title="Inspiration">#BEKAPTEN</a>
+                                </p>
+                                <div class="col-sm-12">
+                                <div id="inspirations-container" class="inline-inspiration" data-limit="4" data-posttype="instagram"><div><div><div class="post-item-container big">
+                                    <span><div class="post-item instagram" >
+                                        <a href="https://kapten-son.com/en/chrono-silver-light-blue-woven-leather.html"><div class="inspirations-post-hover"><div><h2 class="main-text">Explore</h2></div></div>
+                                            <img src="./skin/frontend/kapten/default/images/inspirations/1.jpg">
+                                        </a></div>
+                                    <span><div class="post-item instagram">
+                                        <a href="https://kapten-son.com/en/copenhagen-grey-brown.html"><div class="inspirations-post-hover"><div><h2 class="main-text">Explore</h2></div></div>
+                                            <img src="./skin/frontend/kapten/default/images/inspirations/2.jpg">
+                                        </a></div>
+                                    <span><div class="post-item instagram">
+                                        <a href="https://kapten-son.com/en/maui-matt-black-blue-mirrored.html" ><div class="inspirations-post-hover"><div><h2 class="main-text">Explore</h2></div></div>
+                                            <img src="./skin/frontend/kapten/default/images/inspirations/3.jpg">
+                                        </a></div>
+                                    <span><div class="post-item instagram">
+                                        <a href="https://kapten-son.com/en/campina-mesh.html"><div class="inspirations-post-hover" ><div><h2 class="main-text">Explore</h2></div></div>
+                                            <img src="./skin/frontend/kapten/default/images/inspirations/4.jpg">
+                                        </a></div>
+                                </div>
                             </div>
                         </div>
                     </div>
