added configurator gif; removed passportholder from menu and added inspirations->brand ambassadors

--- a/de/index.html
+++ b/de/index.html
@@ -407,14 +407,6 @@
                     </li>
 
                     <li class="desktop-submenu">
-                        <a href="https://kapten-son.com/de/passport-holder-grey.html" title="Passport Holder">Passport Holder</a>
-                    </li>
-
-                    <li class="mobile-submenu">
-                        <a href="https://kapten-son.com/de/passport-holder-grey.html" title="">Passport Holder</a>
-                    </li>
-
-                    <li class="desktop-submenu">
                         <a href="https://kapten-son.com/de/configurator/" title="Konﬁgurator">Konﬁgurator</a>
                     </li>
 
@@ -429,6 +421,7 @@
                             <div class="subblock submenu">
                                 <ul>
                                     <li><a href="https://magazine.kapten-son.com/" title="Magazin">Magazin</a></li>
+                                    <li><a href="https://kapten-son.com/de/ambassadors/" title="Shop Insta">Brand Ambassadors</a></li>
                                     <li><a href="https://kapten-son.com/de/inspirations/" title="Shop Insta">Shop Insta</a></li>
                                 </ul>
                             </div>
@@ -442,6 +435,7 @@
                             <div class="subblock submenu">
                                 <ul>
                                     <li><a href="https://magazine.kapten-son.com/" title="Magazin">Magazin</a></li>
+                                    <li><a href="https://kapten-son.com/de/ambassadors/" title="Shop Insta">Brand Ambassadors</a></li>
                                     <li><a href="https://kapten-son.com/de/inspirations/" title="Shop Insta">Shop Insta</a></li>
                                 </ul>
                             </div>
@@ -613,14 +607,6 @@
             </li>
 
             <li class="desktop-submenu">
-                <a href="https://kapten-son.com/de/passport-holder-grey.html" title="Passport Holder">Passport Holder</a>
-            </li>
-
-            <li class="mobile-submenu">
-                <a href="https://kapten-son.com/de/passport-holder-grey.html" title="">Passport Holder</a>
-            </li>
-
-            <li class="desktop-submenu">
                 <a href="https://kapten-son.com/de/configurator/" title="Konﬁgurator">Konﬁgurator</a>
             </li>
 
@@ -635,6 +621,7 @@
                     <div class="subblock submenu">
                         <ul>
                             <li><a href="https://magazine.kapten-son.com/" title="Magazin">Magazin</a></li>
+                            <li><a href="https://kapten-son.com/de/ambassadors/" title="Shop Insta">Brand Ambassadors</a></li>
                             <li><a href="https://kapten-son.com/de/inspirations/" title="Shop Insta">Shop Insta</a></li>
                         </ul>
                     </div>
@@ -648,6 +635,7 @@
                     <div class="subblock submenu">
                         <ul>
                             <li><a href="https://magazine.kapten-son.com/" title="Magazin">Magazin</a></li>
+                            <li><a href="https://kapten-son.com/de/ambassadors/" title="Shop Insta">Brand Ambassadors</a></li>
                             <li><a href="https://kapten-son.com/de/inspirations/" title="Shop Insta">Shop Insta</a></li>
                         </ul>
                     </div>
@@ -838,12 +826,17 @@
                         </div>
                     </div>
 
-                    <div class="container configurator">
-                        <div class="row">
-                            <div class="col-xs-12">
-                                <!--TODO: Change image to animated GIF -->
-                                <img src="./skin/frontend/kapten/default/images/configurator.jpg" style="max-width: 95%;"/>
-                                <div style="color: red; margin: -200px 0 200px 0; text-align: center">REPLACE THIS IMAGE WITH ANIMTED GIF</div>
+                    <div class="configurator">
+                        <div class="container configurator-container" id="configurator-anchor">
+                            <div class="row">
+                                <div class="col-xs-12 text-center text-uppercase headsection">
+                                    <h1 class="font-h2 headline">Konfigurator</h1>
+                                    <h2 class="info1 subheadline" >Gestalte deinen eigenen Look</h2></div>
+                                    </div>
+                                    <div class="row">
+                                        <img src="./skin/frontend/kapten/default/images/kapten_and_son_configurator.gif" width="100%"/>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
