removed header, removed configurator, added fb pixel + analytics

--- a/de/index.html
+++ b/de/index.html
@@ -103,28 +103,28 @@
 
 
     <!-- Facebook Pixel Code -->
-    <!--<script>-->
-    <!--!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');-->
+    <script>
+    !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
 
-    <!--fbq('init', '962233107133661');-->
-    <!--fbq('track', "PageView", {"country":"de","language":"de","device":"desktop","login_status":"not logged in"});-->
-    <!--</script>-->
-    <!--&lt;!&ndash; End Facebook Pixel Code &ndash;&gt;-->
+    fbq('init', '962233107133661');
+    fbq('track', "PageView", {"country":"de","language":"de"});
+    </script>
+    <!-- End Facebook Pixel Code -->
 
-    <!--&lt;!&ndash; Google Analytics Code &ndash;&gt;-->
-    <!--<script type="text/javascript">-->
-        <!--//<![CDATA[-->
-        <!--(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){-->
-            <!--(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),-->
-            <!--m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)-->
-        <!--})(window,document,'script','//www.google-analytics.com/analytics.js','ga');-->
-        <!--ga('create', 'UA-52171885-1', 'auto');-->
-        <!--ga('require', 'ec');-->
-        <!--//console.log('ec enabled');-->
-        <!--ga('require', 'displayfeatures');-->
-        <!--ga('set', 'anonymizeIp', true);-->
-        <!--//]]>-->
-    <!--</script>-->
+    <!-- Google Analytics Code -->
+    <script type="text/javascript">
+        //<![CDATA[
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+        ga('create', 'UA-52171885-1', 'auto');
+        ga('require', 'ec');
+        //console.log('ec enabled');
+        ga('require', 'displayfeatures');
+        ga('set', 'anonymizeIp', true);
+        //]]>
+    </script>
     <!-- End Google Analytics Code -->
 
     <script>window.jQuery||document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"><\/script>');</script><script>jQuery.noConflict();</script><!-- BEGIN SocialShare - OpenGraphTags Head -->
@@ -699,15 +699,7 @@
 
 </div>-->
 
-<noscript>
-    &lt;div class="global-site-notice noscript"&gt;
-    &lt;div class="notice-inner"&gt;
-    &lt;p&gt;
-    &lt;strong&gt;JavaScript scheint in Ihrem Browser deaktiviert zu sein.&lt;/strong&gt;&lt;br /&gt;
-    Sie müssen JavaScript in Ihrem Browser aktivieren, um alle Funktionen in diesem Shop nutzen zu können.                &lt;/p&gt;
-    &lt;/div&gt;
-    &lt;/div&gt;
-</noscript>
+
 
 <div class="layout layout-1-col">
     <div role="main" style="padding: 0;">
@@ -732,6 +724,7 @@
                                     </div>
                                 </div>
                             </div>
+                            <!---
                             <div class="container-fluid landing-page-slide chrono-black-steel-header slick-slide">
                                 <div class="row">
                                     <div class="col-md-12 col-xs-12">
@@ -748,6 +741,7 @@
                                     </div>
                                 </div>
                             </div>
+                            -->
                         </div>
                     </div>
                     <script type="text/javascript">
@@ -825,7 +819,7 @@
                             </div>
                         </div>
                     </div>
-
+                    <!--
                     <div class="configurator">
                         <div class="container configurator-container" id="configurator-anchor">
                             <div class="row">
@@ -840,7 +834,7 @@
                             </div>
                         </div>
                     </div>
-
+                    -->
                     <div class="container" id="bestseller">
                         <div class="row">
                             <div class="col-md-12 col-xs-12">
