Google Analytics fix

--- a/de/index.html
+++ b/de/index.html
@@ -1115,4 +1115,11 @@
 <!--Load Fonts -->
 <link rel="stylesheet" type="text/css" href="./skin/frontend/kapten/default/css/Freeland.css" media="all">
 
+<!-- Google Analytics snippet -->
+<script type="text/javascript">
+    //<![CDATA[
+    ga('send', 'pageview');
+    //]]>
+</script>
+<!-- End Google Analytics -->
 </body></html>
